--- a/styles/style.css
+++ b/styles/style.css
@@ -3,13 +3,11 @@ main {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
     font-family: 'Titillium Web', sans-serif;
 }
 
 section {
-    width: 80vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,10 +17,13 @@ section {
 
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     height: 80px;
     box-shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
     margin: 20px;
+    width: 100%;
+    margin: 0px;
+    margin-bottom: 20px;
 }
 
 div {
@@ -33,7 +34,7 @@ div {
     border: solid 2px black;
 }
 
-p {
+p, strong {
     margin: 10px;
 }
 
@@ -53,7 +54,13 @@ button {
 }
 
 .flex-row {
+    display: flex;
     flex-direction: row;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
 }
 
 .row-space-around {
@@ -61,5 +68,5 @@ button {
 }
 
 .driver-info {
-    width: 55vw;
+    width: 40vw;
 }
